--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.28.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.2",
@@ -22,7 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.522.0",
-    "next": "13.5.6",
+    "next": "^13.5.7",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^3.1.0",
