--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^13.5.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.8",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
