--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csv-parse": "^6.1.0",
+    "formidable": "^3.5.4",
     "lucide-react": "^0.522.0",
     "next": "^13.5.7",
     "react": "^18",
