--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^6.28.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@getbrevo/brevo": "^3.0.1",
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "@neondatabase/serverless": "^1.0.1",
